--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "typescript": "^4.4.2",
     "vue": "^2.6.11",
     "vue-router": "^3.5.2"
   },
@@ -20,6 +19,8 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "ts-loader": "^9.2.5",
+    "typescript": "^4.4.2",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
